--- a/terms.html
+++ b/terms.html
@@ -5,6 +5,41 @@
 </head>
 <body>
     <h1>Terms of Service</h1>
-    <p>These are placeholder Terms of Service for LTV Stock Price GPT. Full terms will be available soon.</p>
+    <p>TTERMS OF SERVICE + NON-COMMERCIAL LICENSE (PRIVATE TOOL)
+
+Applies to: LTV Stock Price GPT
+Effective Date: [Insert Today’s Date]
+
+1. Private Access
+This tool is provided for private, non-commercial educational use only. By accessing or using this tool, you agree to these terms.
+
+2. Non-Commercial Use
+You may not:
+
+Sell, sublicense, lease, or commercialize any part of this tool
+Use this tool in any financial services, investment advisory, or commercial business
+Use or redistribute the outputs as financial advice, signals, or endorsements
+This includes—but is not limited to—public posts, platforms, consulting work, or investor-facing materials.
+
+3. Intellectual Property
+All content, code, models, and systems are the intellectual property of the creator. You are granted a limited, revocable, non-transferable license to use the tool solely for private educational purposes.
+
+4. No Warranties
+This tool is provided “as is” with no warranties—express or implied. The creator makes no guarantees regarding:
+
+Accuracy of data or outputs
+Suitability for financial decisions
+Availability or uptime of the tool
+5. Limitation of Liability
+By using this tool, you acknowledge that the creator shall not be liable for any losses, damages, or actions taken based on its use—including financial, legal, or reputational harm.
+
+6. Termination
+Access to this tool may be revoked at any time, for any reason, without notice.
+
+7. Governing Law
+These terms are governed by the laws of [Insert Jurisdiction—e.g., State of Florida, USA].
+
+By using this tool, you agree to these terms in full. If you do not agree, do not use or access the tool.
+</p>
 </body>
 </html>
