--- a/terms.html
+++ b/terms.html
@@ -37,7 +37,7 @@ By using this tool, you acknowledge that the creator shall not be liable for any
 Access to this tool may be revoked at any time, for any reason, without notice.
 
 7. Governing Law
-These terms are governed by the laws of [Insert Jurisdiction—e.g., State of Florida, USA].
+These terms are governed by the laws of State of Florida, USA.
 
 By using this tool, you agree to these terms in full. If you do not agree, do not use or access the tool.
 </p>
